Record what an empty array does not say, and say what a criterion is of
Two readings the review found, neither of them wrong today.

A member the fixture leaves empty was recorded as an array of strings.
An empty array says its own name and nothing about what it holds, so
such a member's element type could move and the record stand. It is
recorded as what it is now, and a separate check refuses a record that
holds one: widening the fixture would have closed today's hole and left
the next member added to the boundary in the same position.

And `Criterion` opened by saying what a build is held to, which reads as
every measure the criterion could ask for. It is held to it among the
measures it asked for — a measure nobody asked for is outside the
question rather than one that failed, which is what makes a criterion
beside a level that measures less a question and not a contradiction.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>